dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/check.c)
AM_INIT_AUTOMAKE(check,0.6.1)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
AC_CHECK_PROG(have_lyx,lyx,yes)
if test x"$have_lyx" != "xyes" ; then
	AC_MSG_WARN([couldn't find lyx, not building docs])
fi
AC_CHECK_PROG(have_sgmltools,sgml2html,yes)
if test x"$have_sgmltools" != "xyes" ; then
	AC_MSG_WARN([couldn't find sgml2html, not building docs])
fi
AM_CONDITIONAL(MAKE_DOC, test x"$have_lyx" = "xyes" -a x"$have_sgmltools" = "xyes" )
dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(unistd.h)
AM_CONFIG_HEADER(config.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(strerror)

AC_OUTPUT(Makefile
	  src/Makefile
	  tests/Makefile
	  doc/Makefile)
