dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/check.c)
AM_INIT_AUTOMAKE(check,0.8.0)
AC_ARG_ENABLE(plain_docdir,
[  --enable-plain-docdir        don't append version information to docdir],
[case "${enableval}" in
  yes) plain_docdir=true ;;
  no)  plain_docdir=false ;;
  *)   AC_MSG_ERROR(bad value ${enableval} for --enable-plain-docdir) ;;
esac], [plain_docdir=false ])

AM_CONDITIONAL(PLAIN_DOCDIR, test x"$plain_docdir" = "xtrue")

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB
if test -n "$GCC"; then
   CFLAGS="$CFLAGS -Wall -Wstrict-prototypes -Wmissing-prototypes"
fi
CK_LYX_LINUXDOC([have_lyx="yes"],[have_lyx="no"])
AC_CHECK_PROG(have_sgmltools,sgml2html,yes)
if test x"$have_sgmltools" != "xyes" -o x"$have_lyx" != "xyes" ; then
	AC_MSG_WARN([couldn't find sgml2html, not building docs])
fi
AM_CONDITIONAL(MAKE_DOC, test x"$have_lyx" = "xyes" -a x"$have_sgmltools" = "xyes" )
dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(unistd.h)
AM_CONFIG_HEADER(config.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
dnl AC_FUNC_FORK
dnl AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([strerror])

AC_OUTPUT(Makefile
	  src/Makefile
	  tests/Makefile
	  doc/Makefile
	  doc/money/Makefile
	  rpm/Makefile
	  debian/Makefile)
